adding some styling, and made list a comment

--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
         <i class="fa-sharp fa-solid fa-square-plus"></i>
       </button>
     </form>
-    <div>
-      <ul>
-        <li>
-          <div>Task name</div>
-          <button><i class="fas fa-check"></i></button>
-          <button><i class="fas fa-trash"></i></button>
-        </li>
+    <div class="todo-container">
+      <ul class="todo-list">
+        <!-- <li class="todo">
+          <div class="todo-item">Task name</div>
+          <button class="complete-btn">
+            <i class="fas fa-check"></i>
+          </button>
+          <button class="trash-btn">
+            <i class="fas fa-trash"></i>
+          </button>
+        </li> -->
       </ul>
     </div>
     <script src="app.js"></script>
