--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <body>
     <header>Todo List</header>
     <form action="">
-      <input type="text" />
-      <button type="submit">
+      <input type="text" class="todo-input" />
+      <button type="submit" class="todo-button">
         <i class="fa-sharp fa-solid fa-square-plus"></i>
       </button>
     </form>
