I finshed the app right now!

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </form>
     <div class="todo-container">
       <ul class="todo-list">
-        <!-- <li class="todo">
+        <!-- javaScript elements -->
+        <!-- <li class="todo fall">
           <div class="todo-item">Task name</div>
           <button class="complete-btn">
             <i class="fas fa-check"></i>
